--- a/Aula 15-02/CSS/home.css
+++ b/Aula 15-02/CSS/home.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;1,100;1,300&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Helvetica;
+    font-family: 'Poppins', sans-serif;
     color: #323232;
     border: none;
 }
@@ -50,7 +51,7 @@ a:hover{
     margin-left: auto;
     margin-right: auto;
     padding: 20px 30px;
-    margin-top: 17vh;
+    margin-top: 5vh;
     border-radius: 10px;
     text-align: center;
 
@@ -105,5 +106,3 @@ input[type="submit"]:hover{
 background-color: #7764bb;
 transition: .5s;
 }
-
-
