--- a/Aula 15-02/CSS/pag3.css
+++ b/Aula 15-02/CSS/pag3.css
@@ -1,11 +1,103 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;1,100;1,300&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Helvetica;
+    font-family: 'Poppins', sans-serif;
     color: #323232;
     border: none;
 }
+
+#container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(0, 0, 0);
+}
+
+#calculator{
+    background-color: #ffffff;
+    padding: 40px;
+    border-radius: 8px;
+    box-shadow: 10px 10px 10px rgba(0,0,0,0.323);
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    margin-top: 3vh;
+}
+
+#calculator h2{
+    font-size: 30px;
+    position: relative;
+}
+
+#calculator h2::before{
+    position: absolute;
+    content: '';
+    height: 3px;
+    width: 150px;
+    background: var(--linear-gradient);
+    bottom: 5px;
+    
+}
+
+#input_box{
+display: flex;
+flex-direction: column;
+gap: 25px;
+}
+
+.input-field{
+display: flex;
+flex-direction: column;
+width: 100%;
+}
+
+.input-field label{
+font-size: 15px;
+color: #4c1d95;
+font-weight: 500;
+}
+
+.input-field input{
+background-color: transparent;
+border: none;
+border-bottom: 1px solid#4c1d95;
+color: #352769;
+font-size: 20px;
+padding: 5px;
+}
+
+.input-field input:focus{
+outline: none;
+}
+
+#result{
+text-align: center;
+}
+
+#total{
+font-size: 40px;
+}
+
+#calculate{
+background-color: #4c1d95;
+border: none;
+padding: 10px;
+color: rgb(255, 255, 255);
+font-weight: bold;
+font-size: 18px;
+border-radius: 4px;
+cursor: pointer;
+}
+
+.button:hover{
+    background-color: #7764bb;
+    transition: .5s;
+    }
 
 body{
     background-image: url(../img/fundo.jpg);
@@ -31,88 +123,3 @@ body{
     background-color: #352769;
     color: #fff;
 }
-textarea:focus, input:focus{
-    outline: none;
-}
-
-h1{
-    color: #352769;
-    line-height: 1.2;
-}
-
-
-h4{
-    color: #715bc2;
-    line-height: 1.2;
-    padding: 1%;
-    margin-top: 1vh;
-}
-a{
-    font-size: .8rem;
-}
-
-a:hover{
-    color: #5f49af;
-}
-
-/* container-login */
-#login-container{
-    background-color: #fff;
-    width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px 30px;
-    margin-top: 9vh;
-    border-radius: 10px;
-    text-align: center;
-
-}
-
-/* formulario */
-form{
-    margin-top: 30px;
-    margin-bottom: 40px;
-}
-
-label, input{
-    display: grid;
-    width: 100%;
-    justify-content: center;
-}
-
-label{
-    font-weight: bold;
-}
-
-input{
-    border-bottom: 2px solid #323232;
-    padding: 0rem;
-    font-size: 1rem;
-    margin-bottom: 20px;
-    place-content: center;
-}
-
-input:focus{
-    border-bottom: 2px solid #352769;
-}
-
-
-input[type="submit"]{
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: bold;
-    border: none;
-    height: 45px;
-    border-radius: 20px;
-    margin-top: 30px;
-    color: #fff;
-    background-color: #4f3f8a;
-    cursor: pointer;
-}
-
-input[type="submit"]:hover{
-background-color: #7764bb;
-transition: .5s;
-}
-
-
